native/core/include/gpu/tensor_ops.h

// ============================================================================
// Data Types
// ============================================================================

typedef enum PTXDType {
    PTX_DTYPE_F32  = 0,
    PTX_DTYPE_F64  = 1,
    PTX_DTYPE_F16  = 2,
    PTX_DTYPE_BF16 = 3,
    PTX_DTYPE_I8   = 4,
    PTX_DTYPE_I16  = 5,
    PTX_DTYPE_I32  = 6,
    PTX_DTYPE_I64  = 7,
    PTX_DTYPE_U8   = 8,
    PTX_DTYPE_U32  = 9,
} PTXDType;
void ptx_tensor_cast_f32_to_f16(float* in, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_cast_f16_to_f32(__half* in, float* out, size_t n, cudaStream_t stream);
void ptx_tensor_reduce_sum_f64(double* in, double* out, size_t outer, size_t reduce, size_t inner, cudaStream_t stream);
void ptx_tensor_reduce_max_f64(double* in, double* out, size_t outer, size_t reduce, size_t inner, cudaStream_t stream);
void ptx_tensor_reduce_min_f64(double* in, double* out, size_t outer, size_t reduce, size_t inner, cudaStream_t stream);
void ptx_tensor_softmax_f64(double* in, double* out, size_t batch, size_t dim, cudaStream_t stream);
void ptx_tensor_affine_f64(double* in, double* out, size_t n, double mul, double add, cudaStream_t stream);
// ============================================================================
// F16 Variants (using CUDA half)
// ============================================================================

void ptx_tensor_add_f16(__half* a, __half* b, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_sub_f16(__half* a, __half* b, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_mul_f16(__half* a, __half* b, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_div_f16(__half* a, __half* b, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_relu_f16(__half* in, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_gelu_f16(__half* in, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_sigmoid_f16(__half* in, __half* out, size_t n, cudaStream_t stream);
void ptx_tensor_softmax_f16(__half* in, __half* out, size_t batch, size_t dim, cudaStream_t stream);
// ============================================================================
// CUDA Graph Integration
// ============================================================================

// Capture a sequence of tensor operations into a graph
cudaError_t ptx_tensor_graph_begin_capture(cudaStream_t stream);
cudaError_t ptx_tensor_graph_end_capture(cudaStream_t stream, cudaGraph_t* graph_out);
cudaError_t ptx_tensor_graph_instantiate(cudaGraph_t graph, cudaGraphExec_t* exec_out);
cudaError_t ptx_tensor_graph_launch(cudaGraphExec_t exec, cudaStream_t stream);