rust/deps/candle-ptx-os/src/ffi.rs


    pub fn ptx_tensor_reduce_sum_f64(inp: *mut f64, out: *mut f64, outer: usize, reduce: usize, inner: usize, stream: CudaStream);
    pub fn ptx_tensor_reduce_max_f64(inp: *mut f64, out: *mut f64, outer: usize, reduce: usize, inner: usize, stream: CudaStream);
    pub fn ptx_tensor_reduce_min_f64(inp: *mut f64, out: *mut f64, outer: usize, reduce: usize, inner: usize, stream: CudaStream);

    pub fn ptx_tensor_softmax_f64(inp: *mut f64, out: *mut f64, batch: usize, dim: usize, stream: CudaStream);
    pub fn ptx_tensor_affine_f64(inp: *mut f64, out: *mut f64, n: usize, mul: f64, add: f64, stream: CudaStream);

    // ========================================================================
    // F16 Operations (half precision)
    // ========================================================================
    pub fn ptx_tensor_add_f16(a: *mut c_void, b: *mut c_void, out: *mut c_void, n: usize, stream: CudaStream);
    pub fn ptx_tensor_sub_f16(a: *mut c_void, b: *mut c_void, out: *mut c_void, n: usize, stream: CudaStream);
    pub fn ptx_tensor_mul_f16(a: *mut c_void, b: *mut c_void, out: *mut c_void, n: usize, stream: CudaStream);
    pub fn ptx_tensor_div_f16(a: *mut c_void, b: *mut c_void, out: *mut c_void, n: usize, stream: CudaStream);

    pub fn ptx_tensor_relu_f16(inp: *mut c_void, out: *mut c_void, n: usize, stream: CudaStream);
    pub fn ptx_tensor_gelu_f16(inp: *mut c_void, out: *mut c_void, n: usize, stream: CudaStream);
    pub fn ptx_tensor_sigmoid_f16(inp: *mut c_void, out: *mut c_void, n: usize, stream: CudaStream);

    pub fn ptx_tensor_softmax_f16(inp: *mut c_void, out: *mut c_void, batch: usize, dim: usize, stream: CudaStream);

    pub fn ptx_tensor_cast_f32_to_f16(inp: *mut f32, out: *mut c_void, n: usize, stream: CudaStream);
    pub fn ptx_tensor_cast_f16_to_f32(inp: *mut c_void, out: *mut f32, n: usize, stream: CudaStream);

    // ========================================================================
    // CUDA Graph Integration
    // ========================================================================
    pub fn ptx_tensor_graph_begin_capture(stream: CudaStream) -> c_int;
    pub fn ptx_tensor_graph_end_capture(stream: CudaStream, graph_out: *mut *mut c_void) -> c_int;
    pub fn ptx_tensor_graph_instantiate(graph: *mut c_void, exec_out: *mut *mut c_void) -> c_int;
    pub fn ptx_tensor_graph_launch(exec: *mut c_void, stream: CudaStream) -> c_int;
}

/// Helper to convert candle DType to PTX DType
impl PTXDType {
    pub fn from_candle(dtype: candle_core::DType) -> Option<Self> {
        match dtype {
            candle_core::DType::F32 => Some(PTXDType::F32),
            candle_core::DType::F64 => Some(PTXDType::F64),
            candle_core::DType::F16 => Some(PTXDType::F16),
            candle_core::DType::BF16 => Some(PTXDType::BF16),
            candle_core::DType::I64 => Some(PTXDType::I64),
            candle_core::DType::U32 => Some(PTXDType::U32),
            candle_core::DType::U8 => Some(PTXDType::U8),
        }
    }
}
